# vdos

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: compute_vdos.py
src/: io_tools.py  kinematic_analysis.py
src/jpmc_md_tools/: io_tools.py  kinematic_analysis.py  spectral_analysis.py
